--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nebular/theme": "^9.0.2",
     "@sanity/client": "^3.3.2",
     "@sanity/image-url": "^1.0.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "eva-icons": "^1.1.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
