--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
@@ -26,6 +27,7 @@
     "@sanity/image-url": "^1.0.1",
     "@tailwindcss/line-clamp": "^0.4.2",
     "eva-icons": "^1.1.3",
+    "firebase": "^10.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
